# simple_timer

./: Cargo.toml  README.md
src/: main.rs
