[package]
name = "simple_timer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.1.1", features = ["async-std"] }
iced_native = "0.2.2"
iced_futures = "0.1.2"
async-std = { version = "1.6.1", features = ["unstable"] }
